--- a/EventMaker/View/CreateEventPage.xaml
+++ b/EventMaker/View/CreateEventPage.xaml
@@ -13,7 +13,8 @@
             <ImageBrush Stretch="Fill" ImageSource="../Assets/static1.squarespace.jpg"/>
         </Grid.Background>
         <Grid.RowDefinitions>
-            <RowDefinition Height="131*"/>
+            <RowDefinition Height="217*"/>
+            <RowDefinition Height="33*"/>
 
 
         </Grid.RowDefinitions>
@@ -25,7 +26,7 @@
         <Grid.DataContext>
             <ViewModel:EventViewModel/>
         </Grid.DataContext>
-        <StackPanel  Grid.Column="2" Margin="0,0,0,-125" Height="853" VerticalAlignment="Bottom">
+        <StackPanel  Grid.Column="2" Grid.Row="0" Height="692" VerticalAlignment="Bottom">
             <TextBlock Text="Id" FontSize="36" FontFamily="Lucida Handwriting"/>
             <TextBox Text="{Binding Id, Mode=TwoWay}" Height="40" Width="296" HorizontalAlignment="Left" FontFamily="Lucida Handwriting" PlaceholderText="ID"  />
 
@@ -57,7 +58,7 @@
         </StackPanel>
 
 
-        <StackPanel Grid.Column="2" Margin="242,82,0,110" />
+        <StackPanel Grid.Column="2" Margin="242,82,0,5" />
 
 
 
